# haskellBook

./: .agignore  .gitignore  Arith4.hs  AsPatterns.hs  Binarize.hs  BinaryTree.hs  Ch10Exercises.hs  Ch11.hs  Ch7Exercises.hs  Ch8.hs  Ch9Exercises.hs  CheckSemigroup.hs  Cipher.hs  CoArbitrary.hs  Composition.hs  DistributiveTypes.hs  Employee.hs  EqCaseGuard.hs  FoldPractice.hs  FunctionWithLet.hs  FunctionWithWhere.hs  FunctionsTakeOneVar.hs  Functors.hs  Functors1.hs  Functors2.hs  Gen.hs  Global.hs  Guards1.hs  Hutton.hs  Jammin.hs  Kinds.hs  List.hs  ListInstances.hs  ListTests.hs  Lists.hs  M1114.hs  MadLibs.hs  Max.hs  Maybe.hs  Monoids.hs  (+39 more)
Addition/: Addition.cabal  Addition.hs  LICENSE
hangman/: hangman.cabal
hangman/src/: Main.hs
