name:               Addition
version:            0.1.0.0
synopsis:           Simple project template from stack
description:        Please see README.md
homepage:           https://github.com/Unclassified/addition#readme
license:            BSD3
license-file:       LICENSE
author:             Alok Singh
maintainer:         alokbeniwal@gmail.com
copyright:          (c) 2016 Alok Singh
category:           Simple
build-type:         Simple
cabal-version:      >=1.10

executable addition
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5

library
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  exposed-modules:  Addition
  build-depends:    base >=4.7 && <5
                  , hspec
                  , Quickcheck
