name:                hangman
version:             0.1.0.0
synopsis:            playing hangman
homepage:            https://github.com/alok/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Alok Singh
maintainer:          alokbeniwal@gmail.com
copyright:           2016 Alok Singh
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
